# sushie

./: AGENTS.md  Makefile  pyproject.toml
data/: AFR.gwas.parquet  EAS.gwas.parquet  EUR.gwas.parquet  make_example.py
src/sushie/: __init__.py  _version.py  cli.py  helpers.py  infer.py  infer_ss.py  io.py  log.py  option_store.py  utils.py
sushie/: _version.py  cli.py
tests/: conftest.py  test_cli.py  test_infer.py
