[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sushie"
dynamic = ["version"]
description = "SNP fine-mapping of molecular data across ancestries using SuShiE"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.12"
authors = [
  { name = "Zeyun Lu", email = "zeyun_lu@dfci.harvard.edu" },
  { name = "Nicholas Mancuso", email = "Nicholas.Mancuso@med.usc.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
dependencies = [
  "bgen-reader==4.0.8",
  "cyvcf2==0.30.18",
  "equinox==0.10.2",
  "glimix_core==3.1.13",
  "jax==0.4.33",
  "jaxlib==0.4.33",
  "pandas-plink==2.2.9",
  "pandas>=1.5.0",
  "pyarrow>=23.0.1",
  "scipy==1.10",
  "typer>=0.24.1",
]

[project.scripts]
sushie = "sushie.cli:main"

[tool.pytest]
addpots = "--cov sushie --cov-report term-missing --verbose"
norecursedirs = ["dist", "bild", ".tox"]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/mancusolab/sushie"
Source = "https://github.com/mancusolab/sushie"
Tracker = "https://github.com/mancusolab/sushie/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "sushie/_version.py"

[tool.hatch.build.targets.sdist]
include = ["/sushie"]

[tool.setuptools_scm]
# See configuration details in https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "ty>=0.0.22",
]

[tool.ruff.lint]
select = [
  "B002",    # Python does not support the unary prefix increment
  "B007",    # Loop control variable {name} not used within loop body
  "B014",    # Exception handler with duplicate exception
  "B023",    # Function definition does not bind loop variable {name}
  "B026",    # Star-arg unpacking after a keyword argument is strongly discouraged
  "B904",    # Checks for raise statements in exception handlers that lack a from clause
  "C",       # complexity
  "COM818",  # Trailing comma on bare tuple prohibited
  "D",       # docstrings
  "DTZ003",  # Use datetime.now(tz=) instead of datetime.utcnow()
  "DTZ004",  # Use datetime.fromtimestamp(ts, tz=) instead of datetime.utcfromtimestamp(ts)
  "E",       # pycodestyle
  "F",       # pyflakes/autoflake
  "G",       # flake8-logging-format
  "I",       # isort
  "ICN001",  # import concentions; {name} should be imported as {asname}
  "ISC001",  # Implicitly concatenated string literals on one line
  "N804",    # First argument of a class method should be named cls
  "N805",    # First argument of a method should be named self
  "N815",    # Variable {name} in class scope should not be mixedCase
  "PGH004",  # Use specific rule codes when using noqa
  "PLC0414", # Useless import alias. Import alias does not rename original package.
  "PLC",     # pylint
  "PLE",     # pylint
  "PLR",     # pylint
  "PLW",     # pylint
  "Q000",    # Double quotes found but single quotes preferred
  "RUF006",  # Store a reference to the return value of asyncio.create_task
  "S102",    # Use of exec detected
  "S103",    # bad-file-permissions
  "S108",    # hardcoded-temp-file
  "S306",    # suspicious-mktemp-usage
  "S307",    # suspicious-eval-usage
  "S313",    # suspicious-xmlc-element-tree-usage
  "S314",    # suspicious-xml-element-tree-usage
  "S315",    # suspicious-xml-expat-reader-usage
  "S316",    # suspicious-xml-expat-builder-usage
  "S317",    # suspicious-xml-sax-usage
  "S318",    # suspicious-xml-mini-dom-usage
  "S319",    # suspicious-xml-pull-dom-usage
  "S601",    # paramiko-call
  "S602",    # subprocess-popen-with-shell-equals-true
  "S604",    # call-with-shell-equals-true
  "S608",    # hardcoded-sql-expression
  "S609",    # unix-command-wildcard-injection
  "SIM105",  # Use contextlib.suppress({exception}) instead of try-except-pass
  "SIM117",  # Merge with-statements that use the same scope
  "SIM118",  # Use {key} in {dict} instead of {key} in {dict}.keys()
  "SIM201",  # Use {left} != {right} instead of not {left} == {right}
  "SIM208",  # Use {expr} instead of not (not {expr})
  "SIM212",  # Use {a} if {a} else {b} instead of {b} if not {a} else {a}
  "SIM300",  # Yoda conditions. Use 'age == 42' instead of '42 == age'.
  "SIM401",  # Use get from dict with default instead of an if block
  "T100",    # Trace found: {name} used
  "T20",     # flake8-print
  "TID251",  # Banned imports
  "TRY004",  # Prefer TypeError exception for invalid type
  "TRY203",  # Remove exception handler; error is immediately re-raised
  "UP",      # pyupgrade
  "W",       # pycodestyle
]

ignore = [
  "E501", # line too long
  "E731", # do not assign a lambda expression, use a def
  "PLC0415", # `import` should be at the top-level of a file

  # Ignore ignored, as the rule is now back in preview/nursery, which cannot
  # be ignored anymore without warnings.
  # https://github.com/astral-sh/ruff/issues/7491
  # "PLC1901", # Lots of false positives
  "DOC502", # Docstring has extraneous exception - required when we use assert, pydoclint expects AssertionError in Raises
  # False positives https://github.com/astral-sh/ruff/issues/5386
  "PLC0208", # Use a sequence type instead of a `set` when iterating over values
  "PLR0911", # Too many return statements ({returns} > {max_returns})
  "PLR0912", # Too many branches ({branches} > {max_branches})
  "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
  "PLR0915", # Too many statements ({statements} > {max_statements})
  "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
  "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
  "UP006",   # keep type annotation style as is
  "UP007",   # keep type annotation style as is
  "UP042", # use of the str and Enum (double inheritance) for strEnum
  "PLW0108", # Use of lambda expression assigned to variable. Use a def instead.
  # Ignored due to performance: https://github.com/charliermarsh/ruff/issues/2923
  "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`
  "G004" # f-string used in logging function

]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"path/to/file.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"